force-app/main/default/objects/User_Story__c/fields/Generate_AC__c.field-meta.xml
<CustomField>
    <fullName>Generate_AC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate AC</label>
    <type>Checkbox</type>
</CustomField>