force-app/main/default/objects/User_Story__c/fields/Generate_Summary__c.field-meta.xml
<CustomField>
    <fullName>Generate_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Summary</label>
    <type>Checkbox</type>
</CustomField>