force-app/main/default/objects/User_Story__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>