force-app/main/default/objects/User_Story__c/fields/Technical_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Technical_Requirement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Technical Requirement</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>