force-app/main/default/objects/User_Story__c/fields/Technical_Solution__c.field-meta.xml
<CustomField>
    <fullName>Technical_Solution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Technical Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>