force-app/main/default/objects/User_Story__c/fields/User_Story_Summary__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Story Summary</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>